# aoc2020

./: .gitignore  Cargo.toml
1/: Cargo.toml
1/src/: main.rs
input_data/: 10.txt  16.txt  18.txt  22.txt
src/: utils.rs
