[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Brad Murray <bradtgmurray@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.4.2"
